# stella

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: app.rs  main.rs
src/app/: comic.rs
src/core/: archive.rs  configuration.rs  mod.rs  platform.rs  renderer.rs
ui/: components.slint  main.slint
ui/views/: current-view.slint  home-view.slint  home.slint  library-view.slint  library.slint  reader-view.slint  reader.slint  settings-view.slint  settings.slint  views.slint
ui/widgets/: sidebar.slint
