[package]
name = "stella"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.14.1", default-features = false, features = [
	"backend-winit",
	"compat-1-2",
	"renderer-software",
	"std",
] }

thiserror = "2.0.17"

tokio = { version = "1.48.0", default-features = false, features = [
	"macros",
	"parking_lot",
	"rt",
	"sync"
] }

zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = 3
panic = "abort"
strip = "symbols"
